--- a/OptimalOffice/OfficeAgent/config/OfficeAgent.yaml
+++ b/OptimalOffice/OfficeAgent/config/OfficeAgent.yaml
@@ -1,28 +1,27 @@
 behaviors:
   OfficeAgent:
-    trainer_type: sac
+    trainer_type: ppo
     hyperparameters:
+      batch_size: 2048
+      buffer_size: 20480
       learning_rate: 0.0003
-      learning_rate_schedule: constant
-      batch_size: 128
-      buffer_size: 50000
-      buffer_init_steps: 1000
-      tau: 0.005
-      steps_per_update: 10.0
-      save_replay_buffer: false
-      init_entcoef: 0.5
-      reward_signal_steps_per_update: 10.0
+      beta: 0.005
+      epsilon: 0.2
+      lambd: 0.95
+      num_epoch: 3
+      learning_rate_schedule: linear
     network_settings:
       normalize: false
-      hidden_units: 128
-      num_layers: 1
+      hidden_units: 256
+      num_layers: 2
       vis_encode_type: simple
     reward_signals:
       extrinsic:
-        gamma: 0.9
+        gamma: 0.99
         strength: 1.0
     keep_checkpoints: 5
-    max_steps: 500000
-    time_horizon: 5
-    summary_freq: 20000
+    checkpoint_interval: 500000
+    max_steps: 3000000
+    time_horizon: 128
+    summary_freq: 10000
     threaded: true
