--- a/gaze_project/gazeBehavior/ver_4/templates/package.json
+++ b/gaze_project/gazeBehavior/ver_4/templates/package.json
@@ -6,14 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ag-grid-community": "^24.0.0",
+    "ag-grid-enterprise": "^24.0.0",
+    "ag-grid-react": "^24.0.0",
     "axios": "^0.20.0",
+    "classnames": "^2.2.6",
     "cross-env": "^7.0.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-highcharts": "^16.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-table": "^7.5.1"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=src react-scripts start",
