--- a/gaze_project/gazeBehavior/ver_6/templates/package.json
+++ b/gaze_project/gazeBehavior/ver_6/templates/package.json
@@ -17,7 +17,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
-    "reactcss": "^1.2.3"
+    "react-table": "^7.7.0",
+    "reactcss": "^1.2.3",
+    "styled-components": "^5.2.3"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=src react-scripts start",
