--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-EEG/.ipynb_checkpoints
-EEG/cortex-v2/.idea/
-EEG/cortex-v2/user.py
-EEG/cortex-v2/__pycache__/
-EEG/cortex-v2/async/cortex_creds
-EEG/cortex-v2/async/lib/__pycache__/
+EEG/System/.ipynb_checkpoints
+EEG/System/cortex-v2/.idea/
+EEG/System/cortex-v2/user.py
+EEG/System/cortex-v2/__pycache__/
+EEG/System/cortex-v2/async/cortex_creds
+EEG/System/cortex-v2/async/lib/__pycache__/
+EEG/System/cortex-v2/user.py
+EEG/.idea/
