--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ EEG/System/cortex-v2/__pycache__/
 EEG/System/cortex-v2/async/cortex_creds
 EEG/System/cortex-v2/async/lib/__pycache__/
 EEG/System/cortex-v2/user.py
+EEG/System/.idea/
 EEG/.idea/
