--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-EEG/System/.ipynb_checkpoints
-EEG/System/cortex-v2/.idea/
-EEG/System/cortex-v2/user.py
-EEG/System/cortex-v2/__pycache__/
-EEG/System/cortex-v2/async/cortex_creds
-EEG/System/cortex-v2/async/lib/__pycache__/
-EEG/System/cortex-v2/user.py
-EEG/System/.idea/
 EEG/.idea/
+EEG/venv
+
+EEG/System/__pycache__
+EEG/System/.idea/
+EEG/System/venv/
+EEG/System/static/libs/user.py
