--- a/Furniture/.gitignore
+++ b/Furniture/.gitignore
@@ -7,12 +7,11 @@
 # IPython
 profile_default/
 ipython_config.py
-bpp/
-data/
 
 dataset
 build
 __pycache__
+bpp
 
 # Remove previous ipynb_checkpoints
 #   git rm -r .ipynb_checkpoints/
