--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ EEG/System/.idea/
 EEG/System/venv/
 EEG/System/static/libs/user.py
 EEG/System/static/libs/__pycache__/
+EEG/System/model/.ipynb_checkpoints/
