--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 EEG/.idea/
-EEG/venv
-
-EEG/System/__pycache__
-EEG/System/.idea/
-EEG/System/venv/
-EEG/System/static/libs/user.py
-EEG/System/static/libs/__pycache__/
-EEG/System/model/.ipynb_checkpoints/
-EEG/System/model/image_classifier/
-EEG/System/model/structured_data_classifier/
-EEG/System/model/
+EEG/__pycache__
+EEG/venv/
+EEG/static/libs/user.py
+EEG/static/libs/__pycache__/
+EEG/model/.ipynb_checkpoints/
+EEG/model/image_classifier/
+EEG/model/structured_data_classifier/
+EEG/model/
